CC-36727: Updated UI for tables in the BO (#136)
Empty State in Backoffice Tables

--- a/src/Spryker/Zed/ProductAlternativeGui/Presentation/ProductAlternative/blocks/product-alternatives-table-item.twig
+++ b/src/Spryker/Zed/ProductAlternativeGui/Presentation/ProductAlternative/blocks/product-alternatives-table-item.twig
@@ -9,7 +9,7 @@
 <td>{{ productAlternative.type | capitalize | trans }}</td>
 <td>
     {% if productAlternative.status %}
-        <span class="label label-info">{{ 'Active' | trans }}</span>
+        <span class="label label-primary">{{ 'Active' | trans }}</span>
     {% else %}
         <span class="label label-danger">{{ 'Inactive' | trans }}</span>
     {% endif %}
